--- a/product-two.html
+++ b/product-two.html
@@ -42,7 +42,7 @@
           <!-- Logo -->
           <div class="logo flex gap-2 relative h-[70px] rounded-md">
             <a href="#">
-              <img src="./assets/data/logo.png" alt="logo" class="w-full h-full object-contain" loading="lazy">
+              <img src="./assets/data/logo-ar.png" alt="logo" class="w-full h-full object-contain" loading="lazy">
             </a>
           </div>
           <div class="row flex justify-between items-center">
@@ -223,6 +223,11 @@
 
 
           <div class="form bg-white p-5 md:p-5 rounded-xl shadow flex-1 text-center lg:text-left duration-500 md:max-w-[600px] mx-auto border">
+            <h4 class="text-center text-lg font-semibold mb-5 text-primary">
+              <!-- <i class="fas fa-truck"></i> -->
+              استمتع بتوصيل مجاني
+            </h4>
+
             <input type="text" id="name" name="name" placeholder="الاســـم" class="w-full p-2 mb-3 outline-none text-[#3A3939] text-xl bg-gray-50 border rounded-md focus:shadow duration-300" />
             <input type="text" id="address" name="address" placeholder="الـعـنـــوان" class="w-full p-2 mb-3 outline-none text-[#3A3939] text-xl bg-gray-50 border rounded-md focus:shadow duration-300" />
             <input type="tel" id="phone" name="phone" placeholder="رقــم الــجـــوال" class="w-full p-2 mb-3 outline-none text-[#3A3939] text-xl text-right bg-gray-50 border rounded-md focus:shadow duration-300" />
