--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
           <!-- Logo -->
           <div class="logo flex gap-2 relative h-[70px] rounded-md">
             <a href="#">
-              <img src="./assets/data/logo.png" alt="logo" class="w-full h-full object-contain" loading="lazy">
+              <img src="./assets/data/logo-ar.png" alt="logo" class="w-full h-full object-contain" loading="lazy">
             </a>
           </div>
           <div class="row flex justify-between items-center">
