--- a/index.html
+++ b/index.html
@@ -44,6 +44,9 @@
             <a href="#">
               <img src="./assets/data/logo-ar.png" alt="logo" class="w-full h-full object-contain" loading="lazy">
             </a>
+            <a href="#">
+              <img src="./assets/data/logo.png" alt="logo" class="w-full h-full object-contain" loading="lazy">
+            </a>
           </div>
           <div class="row flex justify-between items-center">
             <!-- UL Navbar -->
